# uw_common

./: .flake8  .gitignore  .gitmodules  README.md  requirements.txt
.github/workflows/: ci.yaml
access_teleop/: CMakeLists.txt  package.xml
access_teleop/config/: fetch_access_teleop.rviz
access_teleop/frontend/: index.html  multi.js
access_teleop/frontend/common_js/: base.js
access_teleop/launch/: app.launch  fetch_full_launch.launch  house_simulation.launch
access_teleop/scrpits/: access_pointcloud_pub.py  access_teleop.py  shared_teleop_functions_and_vars.py
access_teleop_msgs/: CMakeLists.txt
fetch_api/: CMakeLists.txt
fetch_api/src/fetch_api/: __init__.py
map_annotator/: CMakeLists.txt  README.md  package.xml
map_annotator/frontend/: .eslintrc  ChangeTracker.js  Editor.js  Selector.js  index.css  index.html  index.js  package-lock.json  package.json  utils.js
map_annotator/frontend/types_js/: Point.js  Pose.js  Region.js  Type.js
map_annotator/maps/: map.yaml
map_annotator/nodes/: map_annotator_node.py
map_annotator_msgs/: CMakeLists.txt  package.xml
recognize_speech/: CMakeLists.txt  package.xml  requirements.txt  setup.py
recognize_speech/launch/: speech_recognition.launch
recognize_speech/scripts/: gpsr_demo  name_drink_demo  speech_recognition_demo  speech_recognition_demo.py
recognize_speech/src/: __init__.py  speech.py
recognize_speech/src/recognize_speech/: __init__.py  speech.py
robocup_teleop/: .rosinstall  CMakeLists.txt  package.xml
robocup_teleop/frontend/: index.html  multi.js
robocup_teleop/frontend/common_js/: app.js
robocup_teleop/launch/: app.launch
robocup_teleop/scrpits/: robocup_pointcloud_pub.py  robocup_teleop.py
robocup_teleop_msgs/: CMakeLists.txt  package.xml
uw_detection/: CMakeLists.txt  README.md  package.xml  setup.py
uw_detection/include/uw_detection/: YoloCloudNode.h  yololayer.h  yolov3-spp.h  yolov3.h
uw_detection/scripts/: camera_detect_demo  camera_detect_sim  camera_to_baselink
uw_detection/src/: YoloCloudNode.cpp  yolo_ros_image_node.cpp  yolocloud_node.cpp  yolov3_prepare_plan.cpp  yolov3_spp_prepare_plan.cpp
uw_detection/src/yolov3/: README.md  gen_wts.py  yololayer.cu  yolov3-spp.cpp  yolov3.cpp
uw_detection/src/yolov3-spp/: yololayer.cu  yololayer.h  yolov3-spp.cpp  yolov3.cpp
uw_knowledge/: CMakeLists.txt  README.md  package.xml
uw_knowledge/maps/uw_arena/: map.pgm  map.yaml
uw_knowledge/scripts/: make_map
uw_language_understanding/: CMakeLists.txt  README.md  package.xml  requirements.txt  setup.py
uw_language_understanding/scripts/: understanding_server_demo
web_teleop/: CMakeLists.txt
web_teleop/frontend/: bower.json
web_teleop/frontend/bower_components/paper-slider/: .bower.json
web_teleop/frontend/bower_components/ros-service/: .bower.json
web_teleop/frontend/bower_components/ros-topic/: .bower.json
web_teleop/frontend/bower_components/sinonjs/: .bower.json
web_teleop/frontend/src/: web-teleop-app.html
web_teleop/launch/: app.launch
web_teleop/nodes/: joint_state_republisher.py
