<?xml version="1.0"?>
<package format="2">
  <name>map_annotator_msgs</name>
  <version>0.0.0</version>
  <description>The map_annotator_msgs package</description>

  <maintainer email="wxyelaine98@gmail.com">Xinyi Wang</maintainer>

  <license>MIT</license>

  <author email="wxyelaine98@gmail.com">Xinyi Wang</author>


  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>message_runtime</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
