<?xml version="1.0"?>
<package format="2">
  <name>recognize_speech</name>
  <version>0.0.1</version>
  <description>package of services related to speech recognition for robot</description>

  <maintainer email="email@example.com">UW Homeskies</maintainer>

  <author email="esneh@cs.washington.edu">Edan Sneh</author>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>

  <build_depend>rospy</build_depend>

  <buildtool_depend>catkin</buildtool_depend>

  <test_depend>roslaunch</test_depend>

</package>